k8s/manifest/application/03.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp
  labels:
    service: webapp
    sre_candidate: setyadi
  namespace: default
spec:
  type: ClusterIP
  selector:
    name: webapp
  ports:
  - name: web-port
    port: 80
    targetPort: 80
    protocol: TCP
