k8s/manifest/application/05.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "ingress"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: webapp
spec:
  rules:
  - host: webapp.dbzl.test
    http:
      paths:
      - path: /
        backend:
          serviceName: webapp
          servicePort: 80
